Team section background change

--- a/css/style.css
+++ b/css/style.css
@@ -207,9 +207,9 @@ h6 {
 /* Section with background
 --------------------------------*/
 
-.section-bg {
+/* .section-bg {
   background: #ecf5ff;
-}
+} */
 
 /*--------------------------------------------------------------
 # Responsive Media Queries
