--- a/css/services.css
+++ b/css/services.css
@@ -2,6 +2,7 @@
 --------------------------------*/
 
 #services {
+    background: #ecf5ff;
     padding: 60px 0 40px 0;
     box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   }
