--- a/css/team.css
+++ b/css/team.css
@@ -3,7 +3,7 @@
 
 
 #team {
-    background: #fff;
+    background: #ecf5ff;
     padding: 60px 0;
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   }
