--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
     z-index: 997;
     transition: all 0.5s;
     padding: 20px 0;
-    background: rgb(5, 5, 5);
+    background:rgba(19, 39, 57, 0.9);
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
   }
   
