--- a/css/services.css
+++ b/css/services.css
@@ -8,11 +8,12 @@
   }
   
   #services .box {
+    height: 200px;
     padding: 30px;
     position: relative;
     overflow: hidden;
     border-radius: 10px;
-    margin: 0 10px 40px 10px;
+    margin: 0 10px 30px 10px;
     background: #fff;
     box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
     transition: all 0.3s ease-in-out;
